--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "react-native-schoolearn",
-  "version": "1.2.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "lixl",
-  "license": "MIT"
+  "license": "MIT",
+  "version": "1.3.0"
 }
